# ter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rapport.bib  rapport.tex  shell_fns.sh
include/: pov.h
rapport/: rapport.bib  rapport.tex  rapport.toc
rapport/chapters/: ameliorations.tex  preambule.tex  problematique.tex  technique.tex
shaders/: normals.fs  vdtm.fs  vdtm.vs  vdtm_debug.fs
src/: capture.cpp  capture_dbg.cpp  pov.cpp  vdtm.cpp
